--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,27 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.7
 version = '1.0'
 
+mainClassName = 'pl.nort.dayoneevernote.DayoneEvernoteApplication'
+
 repositories {
     mavenCentral()
+    maven {
+        url 'http://repo.spring.io/libs-snapshot'
+    }
 }
 
 dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.0.0.BUILD-SNAPSHOT'
+    compile group: 'com.google.guava', name: 'guava', version: '16.0.1'
+
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.0.0.BUILD-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+jar {
+    baseName = 'dayone-evernote'
+    version = '1.0.0'
 }
