--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.0.0.BUILD-SNAPSHOT'
     compile group: 'com.google.guava', name: 'guava', version: '16.0.1'
+    compile group: 'com.evernote', name: 'evernote-api', version: '1.25.1'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.0.0.BUILD-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.11'
