--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile group: 'joda-time', name: 'joda-time', version: '2.3'
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'com.syncthemall', name: 'enml4j', version: '1.0.0'
+    compile group: 'org.codehaus.woodstox', name: 'woodstox-core-asl', version: '4.2.0'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.0.0.BUILD-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.11'
