--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
     maven {
         url 'http://repo.spring.io/libs-snapshot'
     }
+    mavenLocal()
 }
 
 dependencies {
@@ -21,6 +22,12 @@ dependencies {
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'com.syncthemall', name: 'enml4j', version: '1.0.0'
     compile group: 'org.codehaus.woodstox', name: 'woodstox-core-asl', version: '4.2.0'
+
+    // Remark
+    compile group: 'com.overzealous', name: 'remark', version: '0.9.3'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.6.+'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.+'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.+'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.0.0.BUILD-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.11'
