cache external DTDs to speed up execution (parsing DTD time went down from 45s to 0.5s)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
-install: ./script/install-deps-in-maven.sh
+install:
+  - ./script/install-deps-in-maven.sh
+  - ./script/cache-evernote-dtd.sh
 jdk:
   - oraclejdk7
   - openjdk7
